--- a/index.html
+++ b/index.html
@@ -301,10 +301,41 @@
     <!-- header -->
     <div class="wrapper">
         <nav data-toggled="false" data-transitionable="false">
+        <a href="#home" id="nav-logo-section" class"nav-section>
+            <div>
+            </div>
+        </a>
+        <div id="nav-mobile-section">
+            <div id="nav-link-section" class="nav-section">
+                <a href="#about">ABOUT</a>
+                <a href="#work">WORK</a>
+            </div>
+            <div id="nav-social-section" class="nav-section">
+                <a href="#contact">
+                    <i class="fa-regular fa-address-book"></i>
+                </a>
+                <a href="https://github.com/devcristi" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/cristian-daniel-boabes-2a2497248/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+            <div id="nav-resume-section" class="nav-section">
+                <a href="./cv.docx">RESUME</a>
+            </div>
+        </div>
+        <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
+            <span>Menu</span>
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        </nav>
+
+        <!-- <nav data-toggled="false" data-transitionable="false">
                 <a href="#home" id="nav-logo-section" class"nav-section>            
                     <div>
                     </div>
-                    <!-- <img src="./logo_a.svg" alt="logo"> -->
+                   
                 </a>
             <div id="nav-mobile-section">
 
@@ -331,7 +362,7 @@
                 <span>Menu</span>
                 <i class="fa-solid fa-bars"></i>
             </button>
-        </nav>
+        </nav> -->
     </div>
 
 
