--- a/index.html
+++ b/index.html
@@ -299,39 +299,41 @@
         </script>
     </div>
     <!-- header -->
-    <div class="wrapper">
-        <nav data-toggled="false" data-transitionable="false">
-            <div id="nav-logo-section" class="nav-section">
-                <a href="#home">
-                    <i class="fa-solid fa-dumpster-fire"></i>
-                </a>
-            </div>
-            <div id="nav-mobile-section">
-                <div id="nav-link-section" class="nav-section">
-                    <a href="#about">ABOUT</a>
-                    <a href="#work">WORK</a>
+    <!-- <div class="wrapper"> -->
+    <nav data-toggled="false" data-transitionable="false">
+        <div id="nav-logo-section" class="nav-section">
+            <a href="#home">
+                <div class="logoa">
+                    <img src="./logo_a 1.svg" alt="">
                 </div>
+            </a>
+        </div>
+        <div id="nav-mobile-section">
+            <div id="nav-link-section" class="nav-section">
+                <a href="#about">ABOUT</a>
+                <a href="#work">WORK</a>
+            </div>
                 <div id="nav-social-section" class="nav-section">
-                    <a href="#">
-                        <i class="fa-brands fa-twitter"></i>
+                    <a href="#contact">
+                        <i class="fa-regular fa-address-book"></i>
                     </a>
-                    <a href="https://www.youtube.com/c/Hyperplexed" target="_blank">
-                        <i class="fa-brands fa-youtube"></i>
+                    <a href="https://github.com/devcristi" target="_blank">
+                        <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="#">
-                        <i class="fa-brands fa-codepen"></i>
+                    <a href="https://www.linkedin.com/in/cristian-daniel-boabes-2a2497248/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
-                <div id="nav-contact-section" class="nav-section">
-                    <a href="#">GET IN TOUCH</a>
+                <div id="nav-resume-section" class="nav-section">
+                    <a href="./cv.docx">RESUME</a>
                 </div>
-            </div>
-            <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
-                <span>Menu</span>
-                <i class="fa-solid fa-bars"></i>
-            </button>
-        </nav>
-
+                </div>
+        </div>
+        <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
+            <span>Menu</span>
+            <i class="fa-solid fa-bars"></i>
+        </button>
+    </nav>
 
         <!-- <nav data-toggled="false" data-transitionable="false">
                 <a href="#home" id="nav-logo-section" class"nav-section>            
@@ -365,7 +367,7 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
         </nav> -->
-    </div>
+    <!-- </div> -->
 
 
 
